--- a/Angular/eMart/src/app/emart/header/header.component.html
+++ b/Angular/eMart/src/app/emart/header/header.component.html
@@ -1,5 +1,4 @@
-
-<div class=" body bg">
+<div class="body bg">
 <nav class="navbar navbar-expand-md  btn">
     <h2 class="text-white">eMart</h2>
     <button type="button" class="navbar-toggler btn" data-toggle="collapse" data-target="#collapse-nav-bar">
@@ -8,7 +7,7 @@
     <div class="collapse navbar-collapse" id="collapse-nav-bar">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item" *ngIf="!getLoggedIn()">
-                <a class="nav-link  text-white" routerLink="/home">Home</a>
+                <a class="nav-link  text-white" routerLink="">Home</a>
             </li>
             <li class="nav-item" *ngIf="!getLoggedIn()">
                 <a class="nav-link  text-white" routerLink="/login">Login</a>
