--- a/Angular/eMart/src/app/emart/seller-signup/seller-signup.component.html
+++ b/Angular/eMart/src/app/emart/seller-signup/seller-signup.component.html
@@ -5,14 +5,14 @@
             <div class="card card-align card-width">
                 <div class="card-header">Seller's SignUp</div>
                 <div class="card-body">
-                    <form action="">
+                    <form action="" #sellerSignupForm="ngForm">
                         <div class="row">
                             <div class="col">
                                 <div class="form-group">
                                     <label for="userName">User Name</label>
-                                    <input type="text" class="form-control" id="userName" 
-                                        name="username" [(ngModel)]="seller.username"
-                                        placeholder="Enter username" />
+                                    <input type="text" class="form-control" id="userName" name="userName" placeholder="Enter username" 
+                                           required #userName="ngModel" [(ngModel)]="seller.username"/>
+                                        <span class="help-block text-danger" *ngIf="!userName.valid && userName.touched">The User Name field is required!</span>
                                 </div>
                             </div>
                         </div>
@@ -20,9 +20,9 @@
                             <div class="col">
                                 <div class="form-group">
                                     <label for="password">Password</label>
-                                    <input type="password" class="form-control" id="password" 
-                                        name="password" [(ngModel)]="seller.password"
-                                        placeholder="Enter password"/>
+                                    <input type="password" class="form-control" id="password" name="password" placeholder="Enter password"
+                                           required #password="ngModel" [(ngModel)]="seller.password"/>
+                                           <span class="help-block text-danger" *ngIf="!password.valid && password.touched">The password field is required!</span>
                                 </div>
                             </div>
                         </div>
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                         </div>
-                        <button type="submit" class="btn " (click)="sellersignup()">Sign Up</button>
+                        <button type="submit" class="btn " (click)="sellersignup()" [disabled]="!sellerSignupForm.valid">Sign Up</button>
                     </form>
                 </div>
             </div>
