--- a/Angular/eMart/src/app/seller-item/seller-itemdisplay/seller-itemdisplay.component.html
+++ b/Angular/eMart/src/app/seller-item/seller-itemdisplay/seller-itemdisplay.component.html
@@ -1,10 +1,10 @@
 <div class="dropdown">
     <button class="btn">Menu</button>
     <div class="dropdown-content">
-     <a class="nav-link  text-dark" routerLink="/item-list">Item List</a>
-     <a class="nav-link  text-dark" routerLink="/cart-list">Cart</a>
-     <a class="nav-link  text-dark" routerLink="/bill-list">Purchase History</a>
-     <a class="nav-link  text-dark" routerLink="/login">Logout</a>
+      <a class="nav-link  text-dark" routerLink="/seller-itemlist">Edit Item</a>
+      <a class="nav-link  text-dark" routerLink="/seller-additem">Add Item</a>
+      <a class="nav-link  text-dark" routerLink="/report">Report</a>
+      <a class="nav-link  text-dark" routerLink="/login">Logout</a>
    </div>
   </div>
   <div class="container">
@@ -18,13 +18,13 @@
       <div class="col-6 btttn" >
         <div class="w-100 mx-2 my-2">
           <h2>Name: </h2>
-          <input type="text" class="form-control" id="name" name="name" value="{{ item?.name }}" />
+          <input type="text" class="form-control" id="name" name="name" value="{{ item?.name }}" [(ngModel)]="item.name"/>
           <h4>Price: </h4>
-          <input type="text" class="form-control" id="price" name="price" value="{{ item?.price }}" />
+          <input type="text" class="form-control" id="price" name="price" value="{{ item?.price }}" [(ngModel)]="item.price"/>
           <h4>Description: </h4>
-          <input type="text" class="form-control" id="description" name="description" value="{{ item?.description }}" />
+          <input type="text" class="form-control" id="description" name="description" value="{{ item?.description }}" [(ngModel)]="item.description"/>
           <h5>Stock: </h5>
-          <input type="text" class="form-control" id="stock" name="stock" value="{{ item?.stock }}" />
+          <input type="text" class="form-control" id="stock" name="stock" value="{{ item?.stock }}" [(ngModel)]="item.stock"/>
           <br>
           <button type="button" class="btn btn-danger" (click)="updateItem(item)">
             Update Item
